# LargeSystems

./: .gitignore  DocumentCreator.hxx  Makefile  README.md  addon.cxx
Genetic_Algorithm/: CMakeLists.txt  Genetic.cpp  Genetic.h  MainCycle.cpp  MainCycle.h  Results.xlsx  main.cpp
Genetic_Algorithm/Script/: Script.py
Genetic_Algorithm/Script/mut0_launch0/: series_0_best_result_0.txt  series_0_run_0.txt  series_0_run_0_sol_after100.txt
Genetic_Algorithm/Script/mut0_launch1/: series_0_best_result_1.txt  series_0_run_1.txt  series_0_run_1_sol_after100.txt
Genetic_Algorithm/Script/mut0_launch2/: series_0_best_result_2.txt  series_0_run_2.txt  series_0_run_2_sol_after100.txt
Genetic_Algorithm/Script/mut0_launch3/: series_0_best_result_3.txt  series_0_run_3.txt  series_0_run_3_sol_after100.txt
Genetic_Algorithm/Script/mut0_launch4/: series_0_best_result_4.txt  series_0_run_4.txt  series_0_run_4_sol_after100.txt
Genetic_Algorithm/Script/mut0_launch5/: series_0_best_result_5.txt  series_0_run_5.txt  series_0_run_5_sol_after100.txt
Genetic_Algorithm/Script/mut0_launch6/: series_0_best_result_6.txt  series_0_run_6.txt  series_0_run_6_sol_after100.txt
Genetic_Algorithm/Script/mut0_launch7/: series_0_best_result_7.txt  series_0_run_7.txt  series_0_run_7_sol_after100.txt
Genetic_Algorithm/Script/mut0_launch8/: series_0_best_result_8.txt  series_0_run_8.txt  (+1 more)
LibraTask/: Addons.xcu  DocumentCreator.cxx  Makefile  TableFunctional.cxx  TableFunctional.hxx
Math_Library/: CMakeLists.txt  Factory.cpp  Factory.h  Functions.cpp  Functions.h  GTest.cpp  main.cpp
Simulated_annealing/: CMakeLists.txt  Gen  Generator.cpp  Structures.h  input.csv  main.cpp
Simulated_annealing/Generator/: Generator_csv.cpp  Generator_csv.h
Simulated_annealing/Mutation/: Mutation.cpp  Mutation.h
Simulated_annealing/Results/: 1_100_11000_Result.txt  1_10_11000_Result.txt  1_20_11000_2Result.txt  1_40_11000_Result.txt  41000_temp.txt  CMakeCache.txt  Result.txt  TempGoodResults.txt
Simulated_annealing/Script/: MultiStarting.py  Par.txt  Result.txt  input.csv  soloResult43000.txt
Simulated_annealing/Simulating/: Simulating.h  Simulating_parralel.h
Simulated_annealing/Temperature/: Temperature.cpp  Temperature.h
(+573 files in other folders)
